--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "dotenv": "^16.0.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
+    "esm": "^3.2.25",
     "framer-motion": "^6.5.1",
     "next": "^13.1.6",
     "openai": "^3.1.0",
+    "openai-streams": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
