--- a/package.json
+++ b/package.json
@@ -11,16 +11,22 @@
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@react-pdf/renderer": "^3.1.9",
     "@vercel/analytics": "^1.0.0",
     "dotenv": "^16.0.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.3",
     "esm": "^3.2.25",
     "framer-motion": "^6.5.1",
+    "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.3",
+    "jspdf": "^2.5.1",
     "next": "^13.1.6",
     "openai": "^3.1.0",
     "openai-streams": "^5.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2"
   }
 }
