--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "openai-streams": "^5.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^6.2.2"
+    "react-markdown": "^8.0.7",
+    "react-pdf": "^6.2.2",
+    "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^3.0.1"
   }
 }
