--- a/package.json
+++ b/package.json
@@ -25,11 +25,15 @@
     "next": "^13.1.6",
     "openai": "^3.1.0",
     "openai-streams": "^5.1.1",
+    "prism": "^4.1.2",
+    "prism-react-renderer": "^2.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.7",
     "react-pdf": "^6.2.2",
     "react-syntax-highlighter": "^15.5.0",
-    "remark-gfm": "^3.0.1"
+    "rehype-katex": "^6.0.3",
+    "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1"
   }
 }
