--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "^13.1.6",
     "openai": "^3.1.0",
     "openai-streams": "^5.1.1",
+    "posthog-js": "^1.57.4",
     "prism": "^4.1.2",
     "prism-react-renderer": "^2.0.4",
     "react": "^18.2.0",
